--- a/Sources/Background/Remote_Sensing/VI_Spectral_Responses.tex
+++ b/Sources/Background/Remote_Sensing/VI_Spectral_Responses.tex
@@ -1,3 +1,35 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Vegetation Indices and Spectral Responses}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Spectral response patterns in remote sensing have been shown to useful [many sources] for determining the health of land vegetation.  The reflection and scattering of light off of vegetation using different spectral bands of incident light, allows for the classification of land objects and vegetation health.  The detector response to these processes are known as spectral responses.  Spectral responses are quantitative measures that change with the condition of the vegetation under inspection.  As plants become stressed, as in the case of water deficiency or drought, there physiological makeup changes.  A variety of different factors can effect the exact spectral response of an object [12].
+
+Vegetative Indices (VI) are ratios between different spectral responses for the purpose of determining the condition and health of plants.  Various combinations of frequencies have been combined to form standard VI’s utilizing the visible spectrum and the infrared spectrum. In its most basic form a vegetation index is defined by,
+%
+\begin{align}
+    VI = Ch1 - Ch2
+\end{align}
+%
+where Ch1 and Ch2 are the channels of the detected spectral responses.
+
+The Normalized Difference Vegetation Index (NDVI) utilizes a plants response to Near Infrared and Visible Red energy.  This is a measure of the chlorophyll content within the leaves since the leaf is highly reflective and transmissive in the NIR since plants cannot use light outside of the visible spectrum for photosynthesis.  This band represents the amount of cellulose contained within the plant.  The red light is used by chlorophyll for photosynthesis.  It also interacts with the cell wall and is therefore a measure of both chlorophyll content and cellulose.  The difference between these two spectral responses is the NDVI.
+%
+\begin{align}
+    NDVI = \frac{NIR - VIS_{red}}{NIR + VIS_{red}}
+\end{align}
+%
+In comparison clouds, snow and water all have relatively high visible responses and low NIR response.  Therefore, little interference from these effects is contributed to the overall NDVI.  Moreover, most satellites average NDVI recordings over a few days to also alleviate any interference with clouds and other particles in the atmosphere [12].
+The NDVI takes advantage of the extreme shift in reflectance and transmittance for plants between the visible and near infrared regions known as the red gap shown in Figure 10.
+
+%TODO insert transmittance and reflectance image
+
+The reflectance curve for a plant leaf versus wavelength, shows that green light (~500-600nm) is the most reflected wavelength of light, and accounts for the green color of leaves. Red (~600-750nm) and and blue light (~400-500nm) are shown to be highly absorbed.  This is due to these frequencies being used in photosynthesis and the high absorption of chlorophyll in these regions.
+
+It should also be noted that as leaves dry down and become brown in color, the reflectance curve in the red part of the spectrum greatly increases [photon vegetation].  The magnitude of this change is dependent on the species of plant, as well as the maturity of the individual leaf structures.
+
+There are also metrics that utilize the visible spectrum such as the Visible Atmospherically Resistant Index (VARI) [13].  It is defined as
+%
+\begin{align}
+    VARI = \frac{VIS_{green} - VIS_{red}}{VIS_{green} + VIS_{red}-VIS_{blue}}
+\end{align}
+%
+The vegetation indices described, all indirectly describe the amount of photosynthetic activity occurring within the plant.  They are sensitive to the local growing conditions, growth stage of plants, and other factors. The major spectral responses of pigments within plants have been studied in vivo in order to gain insight into how light is utilized on a metabolic level by plants, in the process of photosynthesis.
