--- a/Sources/Conclusion/Conclusion.tex
+++ b/Sources/Conclusion/Conclusion.tex
@@ -10,3 +10,17 @@
   \end{minipage}
   \vspace{0.5cm}
 \end{center}
+
+The polarization created by a material when unpolarized light is incident, as in most natural settings, has been shown to have distinguishing characteristics for determining both the species and physiological state of vegetation.  Although normally assumed to be unpolarized, the diffuse portion of reflectance contains information that can be useful for classification and plant health analysis.  The specular portion of light also contains distinguishing information and in our results provided better classification.
+
+As areas in precision agriculture expand into areas of indoor growing operations in more controlled environments, the application of precise amounts of agricultural inputs will become more viable.  A better understanding of the effects of light on individual plants for determining their overall health will be useful in the future as resources become more scarce.
+
+Results for Red Oak have been provided in detail for this report as it provides the simplest explanation for the results.  Each species has slightly different results depending on there composition.  Further explanation would have to be given at an individual species level to account for these results.
+
+The relative water content of leaves is shown to be correlated with both its texture and polarization response when captured by a digital microscope.
+
+Further improvements to experiment design, plant health status control, image acquisition should be taken to improve the results of regression.
+
+Different light sources should be investigated to determine the consistency of our results.  Image segmentation may prove beneficial to isolating the effects of localized features.  Physiological indicators, such as pigment concentrations, in addition to relative water content should be investigated to further show health status and correlate the polarization response.
+
+Overall this study has provided a basis for many of the principals required for understanding the micro scale concepts involved with the remote sensing of vegetation. Improvements to current models and suggestions for areas of further study, have been provided.
