--- a/Sources/Background/Plant_Physiology/Photosynthesis.tex
+++ b/Sources/Background/Plant_Physiology/Photosynthesis.tex
@@ -5,9 +5,11 @@
 Photosynthesis is a fundamental process that dictates the growth of all land plants.  Water plays an important role in this chemical process and its availability in plant leaves is an indicator of the plants ability to perform photosynthesis.
 
 The chemical reaction undergone during photosynthesis involves the conversion of carbon dioxide and water with light energy, to create a carbohydrate and oxygen.  It is formally written as,
-
-[insert equation for photosynthesis]
-
+%
+\begin{align}
+    6CO_2 + 6H_2O \xrightarrow{\text{light}} C_6H_12O_6 + 6O_2
+\end{align}
+%
 Due to waters integral role in this reaction, water stress in plants can lead to decreased photosynthetic activity.  It was pointed out by Ehleringer, referenced in [1], that water stress “can decrease…photosynthesis by reflecting quanta that might have been used in photosynthesis”.   Chlorophyll is an essential pigment in photosynthesis due to it being “an efficient light-absorbing molecule” [9].  It is highly absorbing in the blue and red spectrum of visible light, and more reflective in the green portion.  The absorption spectrum for chlorophyll can be seen in Figure 8. This spectrum is what causes many leaves to be green.  Note that is regions outside the visible, chlorophyll does not absorb the incident radiation.
 
 [insert image of chlorophyll spectrum]
