--- a/Sources/Background/Plant_Physiology/RWC.tex
+++ b/Sources/Background/Plant_Physiology/RWC.tex
@@ -1,3 +1,31 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Relative Water Content}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+The Relative Water Content (RWC) of a leaf is a measure of the current water level based on the total leaf water retaining capacity.  It is a useful measure of the water balance within a plant as it expresses the absolute amount of current water in a plant, in proportion to the minimum amount of water it can hold.
+
+Water makes up over 90\% of the mass of a leaf, and although RWC provides a good indicator of plant health and water capacity, it is highly dependent on the age and maturity of the leaf.  It should also be taken into consideration that leaves can also be very heterogeneous and contain a variety of complex structures in different stages of growth, within each individual leaf.
+
+Correlations between the RWC and other physiological responses have been found in [9].
+
+\begin{table}[h]
+  \centering
+  \begin{tabular}{ll}
+    \toprule
+    \textbf{Relative Water Content ~(\%)}      & \textbf{Plant Physiological Response}\\
+    \midrule
+      \texttt{90-100}          & closing of the stomata, reduction of cellular expansion and growth\\
+      \texttt{80-90}           & tissue composition change, altered rates of photosynthesis and respiration\\
+      \texttt{<80}         & ceasing of photosynthesis\\
+    \bottomrule
+  \end{tabular}
+  \caption{%
+    Plant physiological responses to detected relative water content levels.
+  }
+  \label{tab:Packages}
+\end{table}
+
+“An increase in reflectance…is not directly related to water content but indirectly, since a decrease in water content can lead to an increase in internal lead air space or cell breakdown which may increase reflectance and decrease transmittance [2]”.
+
+This increase in internal air space leads to multiple scattering at air wax boundaries, and creates differences in the reflection and transmission of light, absorption, and the S1 and S2 parameters of the polarization response.
+
+Field measurements of the physiological properties of plants are time consuming and error prone.  It is therefore beneficial to pursue solutions to quantifying these metrics in large area field measurements.
