--- a/Thesis.tex
+++ b/Thesis.tex
@@ -100,6 +100,45 @@
 \makeindex
 \makeglossaries
 
+
+\usepackage{bm}
+\usepackage{graphicx}
+%\graphicspath{Sources/Background/Texture_and_Tone/}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% code formatting
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{listings}
+\usepackage{color}
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{frame=tb,
+  language=Python,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=3
+}
+
+%%%%%%%%%%%%
+% Get more depth in sections
+%%%%%%%%%%%%
+\usepackage{titlesec}
+
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Incipit
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
